Ajustes Controllers y Views

--- a/WebDocuments/Views/Solicitud/Index.cshtml
+++ b/WebDocuments/Views/Solicitud/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿
-@model IList<WebDocuments.Models.EstadoModel>
+@model WebDocuments.Models.SolicitudModel
 
 @{
     ViewBag.Title = "Index";
@@ -7,11 +7,3 @@
 
 <h2>Index</h2>
 
-<div>
-    <select>
-        @foreach(var item in Model)
-        {
-            <option value="@item.cod_estado">@item.gls_estado</option>
-        }
-    </select>
-</div>
